Added Travis-CI integration.

--- a/src/main/latex/info/project/git.tex
+++ b/src/main/latex/info/project/git.tex
@@ -12,8 +12,7 @@
 % Section heading.
 \section{Git repository}
 
-%TODO: put the repo
-All project sources and related resources are stored in Git repository \url{TODO}. To standardize workflow with repository, ChillDev-Commons follows Git-flow policy. In order to synchronize your repository you should call \texttt{git flow init} in your repository directory with following settings:
+All project sources and related resources are stored in Git repository \url{https://github.com/chilloutdevelopment/pl.chilldev.commons.git}. To standardize workflow with repository, ChillDev-Commons follows Git-flow policy. In order to synchronize your repository you should call \texttt{git flow init} in your repository directory with following settings:
 
 \begin{description}
     \item[Branch name for production releases:]
