ExceptionFormatter with all goods (tests and docs), code highlughting for LaTeX.

--- a/commons-concurrent/src/main/latex/guide/dev/futures.tex
+++ b/commons-concurrent/src/main/latex/guide/dev/futures.tex
@@ -7,12 +7,7 @@
 % @version 0.0.1
 % @since 0.0.1
 % @category ChillDev-Commons
+% @subcategory Concurrent
 %%
 
-% Index heading.
-\chapter{Project info}
-
-% Include all calls.
-\include{./project/intro}
-\include{./project/git}
-\include{./project/modules}
+%TODO
