--- a/src/main/latex/common/init.tex
+++ b/src/main/latex/common/init.tex
@@ -15,6 +15,8 @@
 \usepackage{indentfirst}
 \usepackage{fancyhdr}
 \usepackage{hyperref}
+\usepackage{listings}
+\usepackage{color}
 %TODO:\usepackage{fullpage}
 %TODO:\usepackage{lastpage}
 
@@ -29,5 +31,27 @@
 % Metainfo.
 \title{\chilldevTitle, version \chilldevVersion}
 \author{Rafał Wrzeszcz - Wrzasq.pl}
+
+% Code listings setup
+\lstset{
+	tabsize=4,
+	rulecolor=,
+    basicstyle=\scriptsize,
+    upquote=true,
+    aboveskip={1.5\baselineskip},
+    columns=fixed,
+    showstringspaces=false,
+    extendedchars=true,
+    breaklines=true,
+    prebreak=\raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
+    frame=single,
+    showtabs=false,
+    showspaces=false,
+    showstringspaces=false,
+    identifierstyle=\ttfamily,
+    keywordstyle=\color[rgb]{0,0,1},
+    commentstyle=\color[rgb]{0.133,0.545,0.133},
+    stringstyle=\color[rgb]{0.627,0.126,0.941}
+}
 
 %TODO: glosaries for acronyms
