--- a/src/main/latex/common/init.tex
+++ b/src/main/latex/common/init.tex
@@ -17,6 +17,7 @@
 \usepackage{hyperref}
 \usepackage{listings}
 \usepackage{color}
+\usepackage{textcomp}
 %TODO:\usepackage{fullpage}
 %TODO:\usepackage{lastpage}
 
